--- a/public/css/header.css
+++ b/public/css/header.css
@@ -376,7 +376,7 @@ section.banner-slider-active-1{
 	right: 40px;
 	font-size: 20px;
 	line-height: 40px;
-	background: #e25b00;
+	background: #000;
 	color: #fff;
 	z-index: 101;
 	padding: 0 12px;
@@ -422,7 +422,7 @@ section.menu-mobile-active{
 .menu-mobile-content .menu-left .menu-left-title h3{
     margin-bottom: 0;
     line-height: 50px;
-    border-bottom: 5px solid #058a36;
+    border-bottom: 5px solid #000;
     margin-bottom: 10px;
 }
 .menu-mobile-box{
@@ -485,7 +485,7 @@ ul.menu-left-ul-lv-1>li>a{
 	font-size: 13px;
 	font-weight: bold;
 	line-height: 35px;
-	color: #048a35;
+	color: #000;
 	-webkit-transition: 0.4s all;
 	-moz-transition: 0.4s all;
 	-ms-transition: 0.4s all;
