--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,6 +23,13 @@ span{
 p{
     font-family: 'Roboto';
 }
+iframe {
+    max-width: 100%;
+    height: auto;
+    object-fit: cover;
+}
+
+
 .container{
 	padding: 0;
 	margin: 0;
